Sources/sdk/sccio.h

/*
 | For transfering extra parmeters needed for prediction from IOCOMPRESSDATA, following is used:
 |      dwReserved1 - prediction values (1 - no prediction, 2 - TIFF prediction, 10 - 15 PNG prediction)
 |                (for more info see PDF Reference Pg. 48, and PNG specification - filter algorithms)
 |      dwReserved2 - number of colmuns (pixels per line)
 |      dwReserved3 - number of color components (last siginivicant byte 0xFF
 |      dwReserved3 - bits per pixel (second byte 0xFF00)
 |      dwReserved3 - early change (third byte 0xFF0000)
 | They are either repeated or extracted in this structure.
 */
typedef struct IOPREDICTORDATAtag
{
    VTBYTE          byPredictor;        /* dwReserved1 - predictor type */
    VTDWORD         dwWidth;            /* dwReserved2 - columns (pixels per line). */
    VTBYTE          byColorComponents;  /* dwReserved3 - number of color components (0xFF) */
    VTBYTE          byBitsPerComponent; /* dwReserved3 - lower byte of dwReserved3  0xFF00 */
    VTBYTE          byEarlyChange;      /* dwReserved3 - higher byte of dwReserved3  0xFF0000 */
    VTDWORD         dwVals;             /* dwWidth*byColorComponents. - components per line */
    VTDWORD         dwPixBytes;         /* bytes per pixel. */
    VTDWORD         dwRowBytes;         /* bytes per line. */
    VTHANDLE        hPredictorLine;     /* handle to predictor line buffer */
    VTBYTE *        pPredictorLine;     /* pointer to predictor line buffer. */
    VTDWORD         dwPredictorIndex;   /* current index in predictor line. */
    VTHANDLE        hSlidingWindow;     /* handle to sliding window buffer */
    VTBYTE *        pSlidingWindow;     /* pointer to sliding widnow buffer */
    VTWORD          wSlidingIndex;      /* current index in sliding window. */
    VTWORD          wSlidingMask;       /* contains mask for wrapping of index in Sliding window (as circular buffer). */
} IOPREDICTORDATA, * PIOPREDICTORDATA;
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************        DCT        *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/

/*
 | For transfering extra parmeters needed for DCT from IOCOMPRESSDATA, following is used:
 |      dwReserved1 - whether ColorTransform parameter is defined in the dictionary
 |                                           (0 - not defined in the dictionary,
 |                                            1 - defined in the dictionary with value stored in
 |                                                dwReserved2)
 |      dwReserved2 - ColorTransform integer (0 - no color transformation,
 |                                            1 - apply color transformation)
 |
 | ColorTransform integer is a code specifying the transformation to be performed on the
 | sample values:
 |       0 No transformation.
 |       1 If the image has three color components, transform RGB values to YUV before
 |         encoding and from YUV to RGB after decoding. If the image has four components,
 |         transform CMYK values to YUVK before encoding and from YUVK to CMYK after
 |         decoding. This option is ignored if the image has one or two color components.
 | The default value of ColorTransform is 1 if the image has three components and 0 otherwise.
 | In other words, conversion between RGB and YUV is performed for all three-component images
 | unless explicitly disabled by setting ColorTransform to 0. Additionally, the encoding
 | algorithm inserts an Adobedefined marker code in the encoded data indicating the ColorTransform
 | value used. If present, this marker code overrides the ColorTransform value given to DCTDecode.
 | Thus it is necessary to specify ColorTransform only when decoding data that does not contain
 | the Adobe-defined marker code.
 */


/*
 * JPEG markers consist of one or more 0xFF bytes, followed by a marker
 * code byte (which is not an FF).  Here are the marker codes of interest
 * in this program.  (See jdmarker.c for a more complete list.)
 */

/* Note: codes C4 and CC are NOT SOF markers */

typedef enum DCT_MARKERtag
{                           /* NON-DIFFERENTIAL HUFFMAN       */
      SOF0  = 0xc0,         /* Baseline DCT                   */
      SOF1  = 0xc1,         /* Extended sequential DCT        */
      SOF2  = 0xc2,         /* Progressive DCT                */
      SOF3  = 0xc3,         /* Spatial DPCM                   */

                            /* DIFFERENTIAL HUFFMAN           */
      SOF5  = 0xc5,         /* Differential sequential DCT    */
      SOF6  = 0xc6,         /* Differential progressive DCT   */
      SOF7  = 0xc7,         /* Differential spatial           */

                            /* NON-DIFFERENTIAL ARITHMETIC    */
      JPG   = 0xc8,         /* Reserved for JPEG extensions   */
      SOF9  = 0xc9,         /* Extended sequential DCT        */
      SOF10 = 0xca,         /* Progressive DCT                */
      SOF11 = 0xcb,         /* Spatial DPCM                   */

                            /* DIFFERENTIAL ARITHMETIC        */
      SOF13 = 0xcd,         /* Differential sequential DCT    */
      SOF14 = 0xce,         /* Differential progressive DCT   */
      SOF15 = 0xcf,         /* Differential spatial           */

      DHT   = 0xc4,         /* Define Huffman table           */
      DAC   = 0xcc,         /* Define Arithmetic conditioning */

      RST0  = 0xd0,         /* Restart with modulo 8 count 0  */
      RST1  = 0xd1,         /* Restart with modulo 8 count 1  */
      RST2  = 0xd2,         /* Restart with modulo 8 count 2  */
      RST3  = 0xd3,         /* Restart with modulo 8 count 3  */
      RST4  = 0xd4,         /* Restart with modulo 8 count 4  */
      RST5  = 0xd5,         /* Restart with modulo 8 count 5  */
      RST6  = 0xd6,         /* Restart with modulo 8 count 6  */
      RST7  = 0xd7,         /* Restart with modulo 8 count 7  */

      SOI   = 0xd8,         /* Start of image                 */
      EOI   = 0xd9,         /* End of image                   */
      SOS   = 0xda,         /* Start of scan                  */
      DQT   = 0xdb,         /* Define quantization table(s)   */
      DNL   = 0xdc,         /* Define number of lines         */
      DRI   = 0xdd,         /* Define restart interval        */
      DHP   = 0xde,         /* Define hierarchical progression*/
      EXP   = 0xdf,         /* Expand reference image(s)      */

      /* RESERVED APPLICATION SEGMENTS 0xFFE0-0xFFEF */
      APP0  = 0xe0,         /* Application Data               */
      APP1  = 0xe1,
      APP2  = 0xe2,
      APP3  = 0xe3,
      APP4  = 0xe4,
      APP5  = 0xe5,
      APP6  = 0xe6,
      APP7  = 0xe7,
      APP8  = 0xe8,
      APP9  = 0xe9,
      APP10 = 0xea,
      APP11 = 0xeb,
      APP12 = 0xec,
      APP13 = 0xed,
      APP14 = 0xee,         /* Adobe Application-Specific JPEG Marker */
      APP15 = 0xef,

      /* RESERVED JPEG EXTENSIONS      0xFFF0-0xFFFD          */
      JPG0  = 0xf0,
      JPG13 = 0xfd,

      COM   = 0xfe,         /* Comment                        */

      TEM   = 0x01,         /* Temp. private use arithmetic   */

      MARKER_ERROR = 0x100

      /* RESERVED 0xFF02-0xFFBF    */
} DCT_MARKER;
#define DCTSIZE             8   /* The basic DCT block is 8x8 samples           */
#define DCT_BLOCK_SIZE      64  /* DCTSIZE squared; # of elements in a block    */
#define NUM_QUANT_TBLS      4   /* Quantization tables are numbered 0..3        */
#define NUM_HUFF_TBLS       4   /* Huffman tables are numbered 0..3             */
#define MAX_COMPS_IN_SCAN   4   /* JPEG limit on # of components in one scan    */
#define MAX_SAMP_FACTOR     4   /* JPEG limit on sampling factors               */
#define DCT_CLIP_SIZE       768
#define DCT_CLIP_OFFSET     256
#define MAX_NUM_HUFF_CODES  256 /* Table B.5 */
#define dctCos1    0.98078528   /* cos(pi/16) */
#define dctSin1    0.19509032   /* sin(pi/16) */
#define dctCos3    0.83146961   /* cos(3*pi/16) */
#define dctSin3    0.55557023   /* sin(3*pi/16) */
#define dctCos6    0.38268343   /* cos(6*pi/16) */
#define dctSin6    0.92387953   /* sin(6*pi/16) */
#define dctSqrt2   1.41421356   /* sqrt(2) */
#define dctSqrt1d2 0.70710678   /* sqrt(2) / 2 */
/*#endif*/

/* color conversion parameters (16.16 fixed point format) */
#define dctCrToR   91881        /*  1.4020      */
#define dctCbToG  -22553        /* -0.3441363   */
#define dctCrToG  -46802        /* -0.71413636  */
#define dctCbToB  116130        /*  1.772       */
/* DCT component info */
typedef struct DCTCOMP_INFOtag
{
    VTBYTE  byComponentID;        /* component identifier (0-255) (for PDF max 4)                     */
    VTBOOL  bInScan;              /* is this component in the current scan?                           */
    VTBYTE  byHSampFactor;        /* horizontal sampling factor (1-4)                                 */
    VTBYTE  byVSampFactor;        /* vertical sampling factor (1-4)                                   */
    VTBYTE  byQuantTableNo;       /* quantization table selector (0..3) (max 4 tables can be defined) */
    VTBYTE  byDCHuffTableNo;      /* DC entropy table (Huffman) selector (0..3)                       */
    VTBYTE  byACHuffTableNo;      /* AC entropy table (Huffman) selector (0..3)                       */
    VTSHORT nPrevDC;              /* DC coefficient accumulator                                       */
} DCTCOMP_INFO;
/* DCT Huffman decoding table */
typedef struct DCTHUFF_TBLtag
{
    VTWORD  firstSym[17];         /* first symbol for this bit length     */
    VTDWORD firstCode[17];        /* first code for this bit length       */
    VTBYTE  numCodes[17];         /* number of codes of this bit length   */
    VTBYTE  sym[256];             /* symbols                              */
} DCTHUFF_TBL;
typedef struct DCTQUANT_TBLtag
{
    VTHANDLE hQuantElems;
    VTLPBYTE pQuantElems;
} DCTQUANT_TBL;