Sources/sccio.pas


     PIOPREDICTORDATA = ^IOPREDICTORDATA;
     IOPREDICTORDATA = record
          byPredictor : VTBYTE;
          dwWidth : VTDWORD;
          byColorComponents : VTBYTE;
          byBitsPerComponent : VTBYTE;
          byEarlyChange : VTBYTE;
          dwVals : VTDWORD;
          dwPixBytes : VTDWORD;
          dwRowBytes : VTDWORD;
          hPredictorLine : VTHANDLE;
          pPredictorLine : PVTBYTE;
          dwPredictorIndex : VTDWORD;
          hSlidingWindow : VTHANDLE;
          pSlidingWindow : PVTBYTE;
          wSlidingIndex : VTWORD;
          wSlidingMask : VTWORD;
       end;
     PPIOPREDICTORDATA = ^PIOPREDICTORDATA;
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************        DCT        ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }
  {
   | For transfering extra parmeters needed for DCT from IOCOMPRESSDATA, following is used:
   |      dwReserved1 - whether ColorTransform parameter is defined in the dictionary
   |                                           (0 - not defined in the dictionary,
   |                                            1 - defined in the dictionary with value stored in
   |                                                dwReserved2)
   |      dwReserved2 - ColorTransform integer (0 - no color transformation,
   |                                            1 - apply color transformation)
   |
   | ColorTransform integer is a code specifying the transformation to be performed on the
   | sample values:
   |       0 No transformation.
   |       1 If the image has three color components, transform RGB values to YUV before
   |         encoding and from YUV to RGB after decoding. If the image has four components,
   |         transform CMYK values to YUVK before encoding and from YUVK to CMYK after
   |         decoding. This option is ignored if the image has one or two color components.
   | The default value of ColorTransform is 1 if the image has three components and 0 otherwise.
   | In other words, conversion between RGB and YUV is performed for all three-component images
   | unless explicitly disabled by setting ColorTransform to 0. Additionally, the encoding
   | algorithm inserts an Adobedefined marker code in the encoded data indicating the ColorTransform
   | value used. If present, this marker code overrides the ColorTransform value given to DCTDecode.
   | Thus it is necessary to specify ColorTransform only when decoding data that does not contain
   | the Adobe-defined marker code.
    }
  {
   * JPEG markers consist of one or more 0xFF bytes, followed by a marker
   * code byte (which is not an FF).  Here are the marker codes of interest
   * in this program.  (See jdmarker.c for a more complete list.)
    }
  { Note: codes C4 and CC are NOT SOF markers  }
  { NON-DIFFERENTIAL HUFFMAN        }
  { Baseline DCT                    }
  { Extended sequential DCT         }
  { Progressive DCT                 }
  { Spatial DPCM                    }
  { DIFFERENTIAL HUFFMAN            }
  { Differential sequential DCT     }
  { Differential progressive DCT    }
  { Differential spatial            }
  { NON-DIFFERENTIAL ARITHMETIC     }
  { Reserved for JPEG extensions    }
  { Extended sequential DCT         }
  { Progressive DCT                 }
  { Spatial DPCM                    }
  { DIFFERENTIAL ARITHMETIC         }
  { Differential sequential DCT     }
  { Differential progressive DCT    }
  { Differential spatial            }
  { Define Huffman table            }
  { Define Arithmetic conditioning  }
  { Restart with modulo 8 count 0   }
  { Restart with modulo 8 count 1   }
  { Restart with modulo 8 count 2   }
  { Restart with modulo 8 count 3   }
  { Restart with modulo 8 count 4   }
  { Restart with modulo 8 count 5   }
  { Restart with modulo 8 count 6   }
  { Restart with modulo 8 count 7   }
  { Start of image                  }
  { End of image                    }
  { Start of scan                   }
  { Define quantization table(s)    }
  { Define number of lines          }
  { Define restart interval         }
  { Define hierarchical progression }
  { Expand reference image(s)       }
  { RESERVED APPLICATION SEGMENTS 0xFFE0-0xFFEF  }
  { Application Data                }
  { Adobe Application-Specific JPEG Marker  }
  { RESERVED JPEG EXTENSIONS      0xFFF0-0xFFFD           }
  { Comment                         }
  { Temp. private use arithmetic    }
  { RESERVED 0xFF02-0xFFBF     }

     PDCT_MARKER = ^DCT_MARKER;
     DCT_MARKER =  Longint;
     Const
       SOF0 = $c0;
       SOF1 = $c1;
       SOF2 = $c2;
       SOF3 = $c3;
       SOF5 = $c5;
       SOF6 = $c6;
       SOF7 = $c7;
       JPG = $c8;
       SOF9 = $c9;
       SOF10 = $ca;
       SOF11 = $cb;
       SOF13 = $cd;
       SOF14 = $ce;
       SOF15 = $cf;
       DHT = $c4;
       DAC = $cc;
       RST0 = $d0;
       RST1 = $d1;
       RST2 = $d2;
       RST3 = $d3;
       RST4 = $d4;
       RST5 = $d5;
       RST6 = $d6;
       RST7 = $d7;
       SOI = $d8;
       EOI = $d9;
       SOS = $da;
       DQT = $db;
       DNL = $dc;
       DRI = $dd;
       DHP = $de;
       EXP = $df;
       APP0 = $e0;
       APP1 = $e1;
       APP2 = $e2;
       APP3 = $e3;
       APP4 = $e4;
       APP5 = $e5;
       APP6 = $e6;
       APP7 = $e7;
       APP8 = $e8;
       APP9 = $e9;
       APP10 = $ea;
       APP11 = $eb;
       APP12 = $ec;
       APP13 = $ed;
       APP14 = $ee;
       APP15 = $ef;
       JPG0 = $f0;
       JPG13 = $fd;
       COM = $fe;
       TEM = $01;
       MARKER_ERROR = $100;

  { The basic DCT block is 8x8 samples            }
     DCTSIZE = 8;
  { DCTSIZE squared; # of elements in a block     }
     DCT_BLOCK_SIZE = 64;
  { Quantization tables are numbered 0..3         }
     NUM_QUANT_TBLS = 4;
  { Huffman tables are numbered 0..3              }
     NUM_HUFF_TBLS = 4;
  { JPEG limit on # of components in one scan     }
     MAX_COMPS_IN_SCAN = 4;
  { JPEG limit on sampling factors                }
     MAX_SAMP_FACTOR = 4;     
     DCT_CLIP_SIZE = 768;     
     DCT_CLIP_OFFSET = 256;     
  { Table B.5  }
     MAX_NUM_HUFF_CODES = 256;     
  { cos(pi/16)  }
     dctCos1 = 0.98078528;     
  { sin(pi/16)  }
     dctSin1 = 0.19509032;     
  { cos(3*pi/16)  }
     dctCos3 = 0.83146961;     
  { sin(3*pi/16)  }
     dctSin3 = 0.55557023;     
  { cos(6*pi/16)  }
     dctCos6 = 0.38268343;     
  { sin(6*pi/16)  }
     dctSin6 = 0.92387953;     
  { sqrt(2)  }
     dctSqrt2 = 1.41421356;     
  { sqrt(2) / 2  }
     dctSqrt1d2 = 0.70710678;     
  {#endif }
  { color conversion parameters (16.16 fixed point format)  }
  {  1.4020       }
     dctCrToR = 91881;     
  { -0.3441363    }
     dctCbToG = -(22553);     
  { -0.71413636   }
     dctCrToG = -(46802);     
  {  1.772        }
     dctCbToB = 116130;     
  { DCT component info  }
  { component identifier (0-255) (for PDF max 4)                      }
  { is this component in the current scan?                            }
  { horizontal sampling factor (1-4)                                  }
  { vertical sampling factor (1-4)                                    }
  { quantization table selector (0..3) (max 4 tables can be defined)  }
  { DC entropy table (Huffman) selector (0..3)                        }
  { AC entropy table (Huffman) selector (0..3)                        }
  { DC coefficient accumulator                                        }

  type

     PDCTCOMP_INFO = ^DCTCOMP_INFO;
     DCTCOMP_INFO = record
          byComponentID : VTBYTE;
          bInScan : VTBOOL;
          byHSampFactor : VTBYTE;
          byVSampFactor : VTBYTE;
          byQuantTableNo : VTBYTE;
          byDCHuffTableNo : VTBYTE;
          byACHuffTableNo : VTBYTE;
          nPrevDC : VTSHORT;
       end;
  { DCT Huffman decoding table  }
  { first symbol for this bit length      }
  { first code for this bit length        }
  { number of codes of this bit length    }
  { symbols                               }

     PDCTHUFF_TBL = ^DCTHUFF_TBL;
     DCTHUFF_TBL = record
          firstSym : array[0..16] of VTWORD;
          firstCode : array[0..16] of VTDWORD;
          numCodes : array[0..16] of VTBYTE;
          sym : array[0..255] of VTBYTE;
       end;

     PDCTQUANT_TBL = ^DCTQUANT_TBL;
     DCTQUANT_TBL = record
          hQuantElems : VTHANDLE;
          pQuantElems : VTLPBYTE;
       end;
  { image size (X)                                    }
  { image size (Y)                                    }
  { size of min coding unit, in data units            }
  { size of min coding unit, in data units            }
  { info for each component               }
  { number of image components (Nf) (1-255).          }
  { need YCbCr-to-RGB transform?                      }
  { set if APP14 Adobe marker was present             }
  { restart interval, as number of MCUs (0-65535)     }
  { quantization tables                       }
  { number of quantization tables                     }
  { DC Huffman tables                        }
  { number of DC Huffman tables                       }
  { AC Huffman tables                        }
  { number of AC Huffman tables (Th) (0-3)            }
  { handle to buffer for one MCU                      }
  { pointer to buffer for one MCU                     }
  {VTLPBYTE    rowBuf[4][32]; }  { buffer for one MCU                                }
  { curent component                                  }
  { current X position within image                   }
  { current Y position within image                   }
  { current position within MCU.                      }
  { MCUs left until restart                           }
  { next restart marker                               }
  { input buffer for variable length codes            }
  { number of valid bits in input buffer              }
  { progressive JPEG spectral selection parms         }
  { progressive JPEG successive approx. parms         }
  { TRUE if SOFn specifies progressive mode           }
  { clip [-256,511] --> [0,255]  }
  {int       dctClipInit; }
